1. Reverse the flow, now it go from left to right. 2. Add the port color which correspond to the input or output 3. Change the device SA identifier

--- a/public/style.css
+++ b/public/style.css
@@ -890,4 +890,15 @@ i.spinner {
 }
 
 
+/*.port_input {*/
+  /*fill: rgb(166, 187, 207);*/
+/*}*/
+
+.sensor_out_function_in {
+  fill: rgb(166, 187, 207);
+}
+
+.functon_out_actuator_in {
+  fill: rgb(135, 169, 128)
+}
 
