--- a/public/style.css
+++ b/public/style.css
@@ -71,11 +71,6 @@ a.brand img {
     padding-right: 10px;
 }
 
-#workspace {
-   margin-left: 160px;
-   overflow: hidden;
-}
-
 #chart {
    overflow: auto;
    background: #e3e3e3;
@@ -104,7 +99,7 @@ a.brand img {
 
 #palette {
    background: #f3f3f3;
-   width: 200px;
+   width: 250px;
    text-align: center;
    -webkit-user-select: none;
    -khtml-user-select: none;
@@ -116,12 +111,12 @@ a.brand img {
     display: none;
     position: absolute;
     top: 0;
-    left:0;
+    left: 5px;
     right: 0;
     bottom: 10px;
     padding: 5px 5px 5px 5px;
     overflow-y: auto;
-    margin-top: 35px;
+    margin-top: 50px;
     box-sizing:border-box;
     -moz-box-sizing: border-box;
 }
@@ -139,7 +134,12 @@ a.brand img {
     text-align: center;
     height: 35px;
     padding: 3px;
-    border-top: 1px solid #999;
+    width: 85%;
+    border-radius: 10px;
+    border: 1px solid #999;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
     box-sizing:border-box;
     -moz-box-sizing: border-box;
 }
@@ -181,8 +181,9 @@ a.brand img {
 .palette-category {
     border: 1px solid #999;
     border-radius: 3px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
 }
+
 .palette-content {
     background: #fff;
     border-top: 1px solid #aaa;
@@ -191,13 +192,43 @@ a.brand img {
     padding-left: 10px;
 }
 
+#palette-base-category-input{
+   background: #E1F5FE;
+}
+
+#palette-base-category-output{
+   background: #E0F2F1;
+}
+
+#palette-base-category-function{
+   background: #E0F7FA;
+}
+
 .palette-header {
     background: #f3f3f3;
     border-radius: 3px;
     cursor: pointer;
     text-align: left;
-    padding: 3px;
+    padding: 5px;   
+    text-transform: capitalize;
+    color: #ffffff; 
+    font-size: 15px;
+    padding-left:12px;
 }
+
+#header-input {
+    background: #2688c9;   
+}
+
+#header-output {
+    background: #1dac91;   
+}
+
+#header-function {
+    background: #00acc1;   
+}
+
+
 .palette-header i {
     float: right;
     -webkit-transition: all 0.2s ease-in-out;
@@ -216,29 +247,42 @@ a.brand img {
     clear: both;
 }
 .palette_label {
-   line-height: 25px;
-   text-align: center;
+   line-height: 32px;
+   text-align: left;
    overflow: hidden;
-
+   padding-left:40px;
+   padding-right:20px;
+   font-size: 14px;
 }
+
 .palette_node {
    cursor:move;
    font-size:13px;
    background: #ddd;
-   margin: 10px auto;
-   height: 25px;
+   margin: 8px 0px;
+   height: 33px;
    border-radius: 6px;
    border: 2px solid #999;
-   background-position: 5% 50%;
+   background-position: 0% 50%;
    background-repeat: no-repeat;
    /*width: 90px;*/
    background-size: contain;
-   /*position: relative;*/
+   position: relative;
 }
 .palette_node:hover {
   border-color: #ff7f0e;
   background-color: #eee;
 }
+
+#palette-output > div > .palette_label{
+   line-height: 32px;
+   text-align: left;
+   overflow: hidden;
+   padding-left:12px;
+   padding-right:10px;
+   font-size: 14px;
+}
+
 .palette_port {
    position: absolute;
    top:8px;
@@ -277,15 +321,36 @@ a.brand img {
     top:50px; left:0; bottom: 0; right:0;
     overflow:hidden;
 }
+
+
 #palette {
-    position: absolute;
-    top: 5px; left:10px; bottom: 10px;
+    /*position: absolute;*/
+    /*top: 5px; left:10px; bottom: 10px;*/
+    float: left;
+    width: 250px;
+    top: 59px;
+    bottom:10px;
+    left: 16px;
+    position: fixed;
+    display: block;
 }
+
 #workspace {
-    position: absolute;
-    margin: 0;
-    top:5px; left:220px; bottom: 10px; right: 280px;
+    /*position: absolute;*/
+    /*margin: 0;
+    top:5px; 
+    left:270px; 
+    bottom: 10px; 
+    right: 380px;*/
+    position: fixed;
+    float: left;
+    top: 59px;
+    left: 285px;
+    right: 16px;
+    bottom: 10px;
+    display: block;
 }
+
 #chart-zoom-controls {
     position: absolute;
     bottom:30px; right: 350px;
@@ -384,9 +449,9 @@ a.brand img {
    font-size: 12px;
 }
 .node {
-  stroke: #999;
+  stroke: #1dac91;
   cursor: move;
-  stroke-width: 2;
+  stroke-width: 1.5;
 }
 .node_strong {
   stroke: #999;
@@ -483,7 +548,7 @@ a.brand img {
 
 .link_line {
   stroke: #7f7f7f;
-  stroke-width: 4;
+  stroke-width: 2;
   fill: none;
   pointer-events: none;
 }
@@ -546,16 +611,45 @@ g.link_unknown path.link_line {
 }
 
 .form-row {
+    padding-top:10px;
     clear: both;
-    margin-bottom: 7px;
 }
+
 .form-row label {
+    clear:left;
     display: inline-block;
     width: 100px;
+    margin-bottom: 5px;
+    color: #2688c9;
 }
+
+.form-row .labelOutput {
+    color: #1dac91;
+}
+
 .form-row input {
     width:70%;
+    margin-right:10px;
+    margin-bottom:10px;
+    background-color: #E1F5FE;
+    /*color: #67809F;*/
 }
+
+.form-row .inputOutput {
+    background-color: #E0F2F1;
+}
+
+#node-input-category{
+    text-transform: capitalize;
+}
+
+.form-row textarea{
+    width:70%;
+    height: auto;
+    background-color: #E1F5FE;
+    /*color: #67809F;*/
+}
+
 
 input.input-append-left {
     border-top-right-radius: 0px;
@@ -895,10 +989,10 @@ i.spinner {
 /*}*/
 
 .sensor_out_function_in {
-  fill: rgb(166, 187, 207);
+  fill: rgb(38, 136, 201);
 }
 
 .functon_out_actuator_in {
-  fill: rgb(135, 169, 128)
+  fill: rgb(29, 172, 145)
 }
 
